--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#work">
+                        <a href="#ach">
                             Achievements
                         </a>
                     </li>
@@ -43,12 +43,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#contact">
+                        <a href="#alumni">
                             Alumni
                         </a>
                     </li>
                     <li>
-                        <a href="#contact">
+                        <a href="#campus">
                             Campus Life
                         </a>
                     </li>
@@ -63,5 +63,49 @@
         <section>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12168.566479227005!2d-75.1179599!3d40.3170144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x38f80b7c7505511b!2sLinden%20Elementary!5e0!3m2!1sen!2sus!4v1612649869865!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
+    <div class="page-header" id="campus">
+            <h2 class="text-capitalize">
+                Campus Life
+            </h2>
+        <div class="row">
+            <div class="travel_mainDiv">
+                <img class="img-responsive" src="https://th.bing.com/th/id/OIP.jFiO8CgZAAp0KhUHSJ0tQAHaHa?w=181&h=180&c=7&o=5&pid=1.7">
+                <h4 class="text-capitalize"><kbd>gaga ball pit</kbd></h4>
+                <hr>
+                <h5 class="text-success text-left text-capitalize">Was added in 2012</h5>
+                <p class="text-muted text-left">Gaga is a fast paced, high energy sport played in an octagonal pit. The more players the better! Dubbed a kinder gentler version of dodge ball, the game is played with a soft foam ball, and combines the skills of dodging, striking, running, and jumping, while trying to hit opponents with a ball below the knees.</p>
+            </div>
+            
+            <div class="travel_mainDiv">
+                <img class="img-responsive" src="https://tse1.mm.bing.net/th?id=OIP.ej47HPzxN1w4VhHTLEpX5AHaE8&pid=Api&rs=1&c=1&qlt=95&w=182&h=121">
+                <h4 class="text-capitalize"><kbd>School Library</kbd></h4>
+                <hr>
+                <h5 class="text-success text-left text-capitalize">Was built-in!</h5>
+                <p class="text-muted text-left">The school library plays a unique role in promoting, protecting, and educating about intellectual freedom. It serves as a point of voluntary access to information and ideas and as a learning laboratory for students as they acquire critical thinking and problem-solving skills needed in a pluralistic society.</p>
+            </div>
+            
+            <div class="travel_mainDiv">
+                <img class="img-responsive" src="https://tse1.mm.bing.net/th?id=OIP.kw5hiM8txhly90g8FuTJRAHaE8&pid=Api&P=0&w=270&h=181">
+                <h4 class="text-capitalize"><kbd>School MPR</kbd></h4>
+                <hr>
+                <h5 class="text-success text-left text-capitalize">Was built-in!</h5>
+                <p class="text-muted text-left">The school MPR plays many roles in school to create a flexible environment.</p>
+            </div>
+         </div>
+        </div>
+        <div class="page-header" id="ach">
+            <h2 class="text-capitalize">
+                School Acheivements
+            </h2>
+         </div>
+        <div class="bg-primary movie-head" data-toggle="collapse" data-target="#ach1">
+            State-Wide Reading Olympics Contest <i class="fa fa-sort-desc"></i>
+        </div>
+        <div class="collapse" id="ach1">
+            <div class="col-lg-9 col-md-9 col-sm-3 col-xs-12" id="achID">
+                <img src="https://tse1.mm.bing.net/th?id=OIP.AnoWgCL7i-enm31sJG1sEgHaEW&pid=Api&rs=1&c=1&qlt=95&w=193&h=113" class="img-responsive img-thumbnail">
+            </div>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text"><h5 class="text-success text-left text-capitalize">Won 1st place for best score</h5><p>Our entire school is hosting a pizza party for the class that won the reading olympics</p></div>
+        </div>
     </body>
 </html>
