--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-    <head>
-        <title>St. Xavier's School</title>
+
+<head>
+    <title>St. Xavier's School</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Press+Start+2P&family=Redressed&display=swap" rel="stylesheet">
@@ -9,64 +10,65 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <nav class="navbar-inverse my_nav_bar" style="position:sticky;top:0;z-index:99999">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Adhij Joshi</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNav">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">
-                            School Name
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#vids">
-                            Contact us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#ach">
-                            Achievements
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#writing">
-                            What’s New
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#alumni">
-                            Alumni
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#campus">
-                            Campus Life
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div>
-            <marquee width="60%" direction="right" height="100px">
-                You can contact us via twitter @CBLindenSchool!
-            </marquee>
+</head>
+
+<body>
+    <nav class="navbar-inverse my_nav_bar" style="position:sticky;top:0;z-index:99999">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Adhij Joshi</a>
         </div>
-        <section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12168.566479227005!2d-75.1179599!3d40.3170144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x38f80b7c7505511b!2sLinden%20Elementary!5e0!3m2!1sen!2sus!4v1612649869865!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </section>
+        <div class="collapse navbar-collapse" id="myNav">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#">
+                        School Name
+                    </a>
+                </li>
+                <li>
+                    <a href="#vids">
+                        Contact us
+                    </a>
+                </li>
+                <li>
+                    <a href="#ach">
+                        Achievements
+                    </a>
+                </li>
+                <li>
+                    <a href="#writing">
+                        What’s New
+                    </a>
+                </li>
+                <li>
+                    <a href="#alumni">
+                        Alumni
+                    </a>
+                </li>
+                <li>
+                    <a href="#campus">
+                        Campus Life
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div>
+        <marquee width="60%" direction="right" height="100px">
+            You can contact us via twitter @CBLindenSchool!
+        </marquee>
+    </div>
+    <section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12168.566479227005!2d-75.1179599!3d40.3170144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x38f80b7c7505511b!2sLinden%20Elementary!5e0!3m2!1sen!2sus!4v1612649869865!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </section>
     <div class="page-header" id="campus">
-            <h2 class="text-capitalize">
-                Campus Life
-            </h2>
+        <h2 class="text-capitalize">
+            Campus Life
+        </h2>
         <div class="row">
             <div class="travel_mainDiv">
                 <img class="img-responsive" src="https://th.bing.com/th/id/OIP.jFiO8CgZAAp0KhUHSJ0tQAHaHa?w=181&h=180&c=7&o=5&pid=1.7">
@@ -75,7 +77,7 @@
                 <h5 class="text-success text-left text-capitalize">Was added in 2012</h5>
                 <p class="text-muted text-left">Gaga is a fast paced, high energy sport played in an octagonal pit. The more players the better! Dubbed a kinder gentler version of dodge ball, the game is played with a soft foam ball, and combines the skills of dodging, striking, running, and jumping, while trying to hit opponents with a ball below the knees.</p>
             </div>
-            
+
             <div class="travel_mainDiv">
                 <img class="img-responsive" src="https://tse1.mm.bing.net/th?id=OIP.ej47HPzxN1w4VhHTLEpX5AHaE8&pid=Api&rs=1&c=1&qlt=95&w=182&h=121">
                 <h4 class="text-capitalize"><kbd>School Library</kbd></h4>
@@ -83,7 +85,7 @@
                 <h5 class="text-success text-left text-capitalize">Was built-in!</h5>
                 <p class="text-muted text-left">The school library plays a unique role in promoting, protecting, and educating about intellectual freedom. It serves as a point of voluntary access to information and ideas and as a learning laboratory for students as they acquire critical thinking and problem-solving skills needed in a pluralistic society.</p>
             </div>
-            
+
             <div class="travel_mainDiv">
                 <img class="img-responsive" src="https://tse1.mm.bing.net/th?id=OIP.kw5hiM8txhly90g8FuTJRAHaE8&pid=Api&P=0&w=270&h=181">
                 <h4 class="text-capitalize"><kbd>School MPR</kbd></h4>
@@ -91,21 +93,39 @@
                 <h5 class="text-success text-left text-capitalize">Was built-in!</h5>
                 <p class="text-muted text-left">The school MPR plays many roles in school to create a flexible environment.</p>
             </div>
-         </div>
         </div>
-        <div class="page-header" id="ach">
-            <h2 class="text-capitalize">
-                School Acheivements
-            </h2>
-         </div>
-        <div class="bg-primary movie-head" data-toggle="collapse" data-target="#ach1">
-            State-Wide Reading Olympics Contest <i class="fa fa-sort-desc"></i>
+    </div>
+    <div class="page-header" id="ach">
+        <h2 class="text-capitalize">
+            School Acheivements
+        </h2>
+    </div>
+    <div class="bg-primary movie-head" data-toggle="collapse" data-target="#ach1">
+        State-Wide Reading Olympics Contest <i class="fa fa-sort-desc"></i>
+    </div>
+    <div class="collapse" id="ach1">
+        <div class="col-lg-9 col-md-9 col-sm-3 col-xs-12" id="achID">
+            <img src="https://tse1.mm.bing.net/th?id=OIP.AnoWgCL7i-enm31sJG1sEgHaEW&pid=Api&rs=1&c=1&qlt=95&w=193&h=113" class="img-responsive img-thumbnail">
         </div>
-        <div class="collapse" id="ach1">
-            <div class="col-lg-9 col-md-9 col-sm-3 col-xs-12" id="achID">
-                <img src="https://tse1.mm.bing.net/th?id=OIP.AnoWgCL7i-enm31sJG1sEgHaEW&pid=Api&rs=1&c=1&qlt=95&w=193&h=113" class="img-responsive img-thumbnail">
-            </div>
-            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text"><h5 class="text-success text-left text-capitalize">Won 1st place for best score</h5><p>Our entire school is hosting a pizza party for the class that won the reading olympics</p></div>
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+            <h5 class="text-success text-left text-capitalize">Won 1st place for best score</h5>
+            <p>Our entire school is hosting a pizza party for the class that won the reading olympics</p>
         </div>
-    </body>
+    </div>
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+            <h4>New School Canteen</h4>
+            <img src="https://th.bing.com/th/id/OIP._EXGKruR536KSQJBobvSvQHaDe?w=347&h=164&c=7&o=5&pid=1.7" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">The school canteen plays a vital role in promoting healthy foods and creating a school culture of healthy eating. Food preferences are developed in childhood. By promoting and encouraging healthier food choices during childhood, it is anticipated that healthy eating habits will be carried through to adulthood and may go some way to help prevent chronic disease later in life.</p>
+        </li>
+    </ul>
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+            <h4>New Virtual Academy in Response to Pandemic</h4>
+            <img src="https://th.bing.com/th/id/OIP.HEkmLhO7feoDtgs03TajiAAAAA?w=286&h=186&c=7&o=5&pid=1.7" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">Going to school can be daunting for many teens. Peer pressure and social drama can be overwhelming. When teens feel anxious about going to school, the quality of their learning can be compromised. No child should have to deal with bullying, but unfortunately, bullying is prevalent today. In online school, your child can complete their school-work in a learning environment that you control, where students are free from distractions and feel safe. You will see your child regain and build self-confidence and independence. My child actually started smiling again!</p>
+        </li>
+    </ul>
+</body>
+
 </html>
