--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
             <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">Going to school can be daunting for many teens. Peer pressure and social drama can be overwhelming. When teens feel anxious about going to school, the quality of their learning can be compromised. No child should have to deal with bullying, but unfortunately, bullying is prevalent today. In online school, your child can complete their school-work in a learning environment that you control, where students are free from distractions and feel safe. You will see your child regain and build self-confidence and independence. My child actually started smiling again!</p>
         </li>
     </ul>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="AL" data-toggle="modal" data-target="#SA">
+        <img src="https://www.biographyonline.net/images/people/Einstein1921.jpg" class="img-responsive">
+        <hr>
+        <p class="text-primary">Albert Einstein</p>
+    </div>
+    
 </body>
 
 </html>
